--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,7 +13,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Firebase"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".Activity.User.UpdateUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.User.AddUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.User.UsersListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.User.UserDetail_UpdateActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.User.UserActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
