--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.User.UpdateUserActivity"
+            android:name=".Activity.ServicesPet.AddServicesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.ServicesPet.ServicesDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.ServicesPet.ServicesListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.ServicesPet.ServicesPetActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.User.AddUserActivity"
