--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,18 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.Pet.PetListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.Pet.PetDetail_Update_Delete"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.Pet.AddPetActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.Pet.PetActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.ServicesPet.AddServicesActivity"
             android:exported="false" />
         <activity
