--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -9,20 +9,26 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Firebase"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".PaymentNotification"
+            android:name=".Services.ServicesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Services.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Services.PaymentNotification"
             android:exported="true" />
         <activity
-            android:name=".OrderPaymentActivity"
+            android:name=".Services.OrderPaymentActivity"
             android:exported="true"
             android:label="Merchant Demo"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -35,11 +41,11 @@
             </intent-filter>
         </activity>
 <!--        <activity-->
-<!--            android:name=".ZaloPayActivity"-->
-<!--            android:exported="false" />-->
+<!--            android:name=".Services.ZaloPayActivity"-->
+<!--            android:exported="true" />-->
         <activity
-            android:name=".ZaloPayActivity"
-            android:exported="true">
+            android:name=".Services.ZaloPayActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
